# chart-review-platform

./: .env.example  .gitignore  ADHERENCE-INTEGRATION.md  CLAUDE.md  Dockerfile  MODULARIZATION.md  NER-INTEGRATION.md  ORGANIZATION.md  README.md  asthma-adherence.md  package-lock.json  package.json  run-provider-compare.mjs
chart-review-platform-concur/python/: masterlist02-26.xlsx  pyproject.toml
chart-review-platform-concur/python/chart_review_deepagents/: __init__.py  __main__.py  events.py  models.py  plugins.py
chart-review-platform-concur/python/chart_review_plugins/: rucam_r_ratio.py  rucam_tools.py
chart-review-platform-concur/python/tests/: test_models.py
chart-review-platform/lib/: pyproject.toml
chart-review-platform/lib/chart_review/: __init__.py  alerts.py  build_skill_validator.py  cli.py  codify.py  codify_icd_prefix.py  codify_tokenizer.py  corpus.py  derivation.py  faithfulness.py  parser.py  validator.py
chart-review-platform/lib/tests/: test_applicability.py  test_codify_extractor.py  test_codify_icd_prefix.py  test_codify_invalidation.py  test_codify_tokenizer.py  test_codify_uses_block.py  test_codify_writer.py  test_contract_eval.py  test_contracts.py  test_corpus_library.py  test_corpus_schemas.py  test_corpus_structure.py  test_derivation_arithmetic.py  test_generate_corpus.py  test_generate_corpus_api.py  test_patient_confirmed_reread_01.py  test_patient_icd_z85_coexist_01.py  test_patient_neg_hard_01.py  test_patient_probable_cytology_01.py  test_patient_probable_fhx_01.py
chart-review-platform/lib/tests/contracts/: test_build_skill_validator.py  (+4 more)
(+2092 files in other folders)
