[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chart-review"
version = "0.1.0"
description = "Deterministic backbone for the agentic chart review platform"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "jsonschema>=4.21",
    "referencing>=0.35",
]

[project.optional-dependencies]
dev = ["pytest>=8", "anthropic>=0.40"]

[project.scripts]
chart-review = "chart_review.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chart_review*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
